      actions for libapache2-mod-webauth for the new Apache module policy.
      dh_apache2 cannot be used for libapache2-mod-webauth because the
      modules have required directives with no reasonable default value.
    - Depend on apache2-dev instead of apache2-threaded-dev.
    - Remove explicit dependencies on apache2.2-common.
    - Use apxs, not apxs2.
  * libwebauth-dev now suggests libapr1-dev since it is required to use
    the parts of the API that require APR (such as keyring traversal or
    creating the WebAuth context from an existing APR pool).
  * Switch to xz compression for the upstream and Debian tarballs and for
    the data element of the generated binary packages.
  * Enable parallel builds.
  * Use dh-autoreconf to always regenerate the build system from source.
    Link with --as-needed to ensure we don't pick up unnecessary shared
    library dependencies.
  * Move single-debian-patch to local-options and patch-header to
    local-patch-header so that they only apply to the packages I build and
    NMUs get regular version-numbered patches.
  * Purging libapache2-mod-{webauth,webkdc} no longer unconditionally
    removes the contents of /var/lib/{webauth,webkdc}.  Instead, known
    files are removed and then removal of the directory is attempted,
    ignoring failure if the directory is non-empty.
  * Update to debhelper compatibility level V9.
    - Use dpkg-buildflags to set CFLAGS.
    - Enable bindnow hardening.  Leave PIE off for right now.
  * Convert debian/copyright to copyright-format 1.0.

 -- Russ Allbery <rra@debian.org>  Fri, 13 Jul 2012 13:33:39 -0700

webauth (4.1.1-1) unstable; urgency=low

  * New upstream release (no Apache 2.4 support yet; that's next).
    - Fix webauth_user_info bug in interpreting login history timestamps.
    - Fix login history timestamp handling in sample confirm template.
    - Suppress history and token rights in sample confirm template when