@@ -1,4 +1,4 @@
 debian/tmp/usr/include/*                        usr/include
-debian/tmp/usr/lib/libwebauth.a                 usr/lib
-debian/tmp/usr/lib/libwebauth.so                usr/lib
-debian/tmp/usr/lib/pkgconfig/libwebauth.pc      usr/lib/pkgconfig
+debian/tmp/usr/lib/*/libwebauth.a               usr/lib
+debian/tmp/usr/lib/*/libwebauth.so              usr/lib
+debian/tmp/usr/lib/*/pkgconfig/libwebauth.pc    usr/lib/pkgconfig
