@@ -1,1 +1,1 @@
-debian/tmp/usr/lib/libwebauth.so.*      usr/lib
+debian/tmp/usr/lib/*/libwebauth.so.*    usr/lib
