@@ -19,9 +19,9 @@ override_dh_autoreconf:
 	dh_autoreconf --as-needed
 
 override_dh_auto_configure:
-	dh_auto_configure --parallel -- --libdir=/usr/lib \
-	    --libexecdir=/usr/lib --enable-webkdc --enable-perl \
-	    --with-apxs=/usr/bin/apxs --enable-reduced-depends
+	dh_auto_configure --parallel -- --libexecdir=/usr/lib \
+	    --enable-webkdc --enable-perl --with-apxs=/usr/bin/apxs \
+	    --enable-reduced-depends
 
 override_dh_auto_build:
 	dh_auto_build --parallel
