@@ -31,6 +31,8 @@ webauth (4.2.0-1) UNRELEASED; urgency=low
     - Depend on apache2-dev instead of apache2-threaded-dev.
     - Remove explicit dependencies on apache2.2-common.
     - Use apxs, not apxs2.
+  * Mark libwebauth7 and libwebauth-dev Multi-Arch: same and webauth-utils
+    Multi-Arch: foreign.  Convert to multiarch library paths.
   * libwebauth-dev now suggests libapr1-dev since it is required to use
     the parts of the API that require APR (such as keyring traversal or
     creating the WebAuth context from an existing APR pool).
